<resources>
    <string name="app_name">OldFlix</string>
    <string name="sign_up_here"><a href="http://www.google.com">Sign Up Here!!</a></string>
    <!--    <string name="sign_in">Sign In</string>-->
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <!--    <string name="todo">TODO</string>-->
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="password1">Password:</string>
    <string name="phone_number1">Phone Number:</string>
    <string name="todo">TODO</string>
    <string name="language" translatable="false">language</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="google">Google</string>
    <string name="google_maps">Google Maps</string>
    <string name="medicines">Medicines</string>
    <string name="dial_in">Dial In</string>
    <string name="emergency">Emergency</string>
    <string name="favouite_contact">Favouite Contact</string>
    <string name="all_contacts">All Contacts</string>
    <string name="light_mode">Light Mode</string>
    <string name="setting">Setting</string>
    <string-array name="lan">
        <item>EN</item>
        <item>HI</item>
        <item>Vi</item>
    </string-array>
    <string name="title_activity_add_item">AddItemActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_the_new_item_name">Enter the new item name</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">name</string>
    <string name="enter_name">Enter Name:</string>
    <string name="enter_phone_number">Enter Phone Number:</string>
    <string name="enter_age">Enter Age:</string>
    <string name="age">Age</string>
    <string name="sign_up_with_security">Sign up with security</string>
    <string name="easy_sign_up">Easy Sign Up</string>
    <string name="finalize_age">Finalize age</string>

    <string-array name="age">
        <item>Below 70</item>
        <item>70 and Above</item>
    </string-array>

    <string-array name="security">
        <item>No Security (Fast Sign In)</item>
        <item>Needs Security</item>
    </string-array>

</resources>