<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionPage">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/call"
            android:layout_width="137dp"
            android:layout_height="121dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/calltxt"
            app:layout_constraintEnd_toStartOf="@+id/message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/phone_call" />

        <ImageView
            android:id="@+id/message"
            android:layout_width="137dp"
            android:layout_height="121dp"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/messagetxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.596"
            app:layout_constraintStart_toEndOf="@+id/call"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/message" />

        <ImageView
            android:id="@+id/google"
            android:layout_width="137dp"
            android:layout_height="121dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="17dp"
            app:layout_constraintBottom_toTopOf="@+id/googletxt"
            app:layout_constraintEnd_toStartOf="@+id/google_maps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calltxt"
            app:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/google_maps"
            android:layout_width="137dp"
            android:layout_height="121dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="17dp"
            app:layout_constraintBottom_toTopOf="@+id/googlemaptxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/google"
            app:layout_constraintTop_toBottomOf="@+id/messagetxt"
            app:srcCompat="@drawable/google_maps" />

        <ImageView
            android:id="@+id/medicines"
            android:layout_width="137dp"
            android:layout_height="121dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="220dp"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/medicinetxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.692"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googletxt"
            app:srcCompat="@drawable/medicines" />

        <TextView
            android:id="@+id/calltxt"
            android:layout_width="61dp"
            android:layout_height="32dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="121dp"
            android:text="@string/call"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/messagetxt"
            app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/call" />

        <TextView
            android:id="@+id/messagetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="44dp"
            android:text="@string/message"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <TextView
            android:id="@+id/googletxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            android:text="@string/google"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/medicines"
            app:layout_constraintEnd_toStartOf="@+id/googlemaptxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/google" />

        <TextView
            android:id="@+id/googlemaptxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="314dp"
            android:text="@string/google_maps"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/googletxt"
            app:layout_constraintTop_toBottomOf="@+id/google_maps" />

        <TextView
            android:id="@+id/medicinetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="258dp"
            android:text="@string/medicines"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medicines" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginEnd="86dp"
            android:layout_marginBottom="11dp"
            android:text="Use the seek bar to incrase the size"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>